--- a/HistoryClassifier/HistoryClassifier/HistoryClassifier.csproj
+++ b/HistoryClassifier/HistoryClassifier/HistoryClassifier.csproj
@@ -62,6 +62,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppType.cs" />
     <Compile Include="Class1.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -71,6 +72,7 @@
     </Compile>
     <Compile Include="HistoryEntry.cs" />
     <Compile Include="Interface1.cs" />
+    <Compile Include="Interface2.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
